# libpandoc

./: .gitignore  INSTALL  LibPandoc.hs  LibPandoc.hsc  Makefile  README.markdown  README.md  Setup.lhs  defaults.json  install.bat  install.sh  libpandoc-dll.c  libpandoc-so.c  libpandoc.cabal  libpandoc.hs  make.bat  pandoc.c  pandoc.h
Text/XML/Light/: Generic.hs
bindings/c/: Makefile  client.c  pandoc.h
bindings/csharp/: Makefile  Pandoc.cs  pandoc.fsx
bindings/dotnet/: Pandoc.Tests.cs  Pandoc.build  Pandoc.cs  Pandoc.fs
bindings/plt-scheme/: Makefile
bindings/plt-scheme/pandoc/: info.ss  pandoc.ss
src/: LibPandoc.hs  pandoc.c  pandoc.h
src/Data/Generics/: Rep.hs
src/LibPandoc/: IO.hs  Instances.hs  Settings.hs
src/Text/XML/Light/: Generic.hs
test/: test.c  test.ss
