Name:                   libpandoc
Version:                0.8
Cabal-Version:          >= 1.2
License:                GPL
Author:                 Anton Tayanovskyy <name.surname@gmail.com>
Maintainer:             Shahbaz Youssefi <shabbyx@gmail.com>
Synopsis:               Pandoc as a shared object or DLL.
Build-Type:             Simple
Executable libpandoc.so
  if os(windows)
    CPP-Options:        -DWIN32
  Extensions:           ForeignFunctionInterface
  Build-Depends:        base              >= 4.6,
                        containers        >= 0.5,
                        pandoc            >= 1.16,
                        pandoc-types      >= 1.16,
                        mtl               >= 2.1,
                        binary            >= 0.7,
                        digest            >= 0.0,
                        utf8-string       >= 0.3,
                        highlighting-kate >= 0.6,
                        data-default      >= 0.5,
                        bytestring        >= 0.10,
                        json              >= 0.9
  Hs-Source-Dirs:       src
  Include-Dirs:         src
  C-Sources:            src/pandoc.c
  Install-Includes:     pandoc.h
  Main-Is:              LibPandoc.hs
  if !os(windows)
    CC-Options:         -fPIC
  Ghc-Options:          -no-hs-main -shared
  if !os(windows)
    Ghc-Options:        -dynamic
    extra-libraries:    HSrts-ghc$compiler
  else
    extra-libraries:    HSrts
